# TheGame

./: .gitignore  .gitmodules  CMakeLists.txt  setup.py
Agent/: main.py  utils.py
Agent/REINFORCE/: agent.py  main.py  utils.py
Includes/ConsolePlay/: ConsolePlayer.hpp
Includes/TheGame/Cards/: Card.hpp  CardStack.hpp
Includes/TheGame/Game/: Game.hpp  GameState.hpp  Player.hpp
Includes/TheGame/Tasks/: StackTask.hpp  Task.hpp
Includes/pyTheGame/Cards/: Card.hpp  CardStack.hpp
Includes/pyTheGame/Game/: Game.hpp  GameState.hpp  Player.hpp
Includes/pyTheGame/Tasks/: StackTask.hpp  Task.hpp
Sources/ConsolePlay/: CMakeLists.txt  ConsolePlayer.cc  main.cc
Sources/TheGame/: CMakeLists.txt
Sources/TheGame/Cards/: Card.cc  CardStack.cc
Sources/TheGame/Game/: Game.cc  GameState.cc  Player.cc
Sources/TheGame/Tasks/: StackTask.cc  Task.cc
Sources/pyTheGame/: CMakeLists.txt  main.cc
Sources/pyTheGame/Cards/: CardStack.cc  Cards.cc
Sources/pyTheGame/Game/: Game.cc  GameState.cc  Player.cc
Sources/pyTheGame/Tasks/: StackTask.cc  Task.cc
Tests/UnitTest/: CMakeLists.txt  CardTests.cc
